--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,19 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http: ^0.12.0+2
   async_loader: ^0.1.2
   fluttertoast: ^3.1.3
-  card_settings: ^1.8.2
+  card_settings: ^1.8.2  
+  form_bloc: ^0.10.4
+  flutter_form_bloc: ^0.10.6
+  flutter_bloc: ^3.2.0
+  shared_preferences: ^0.5.6+1
+  liquid_progress_indicator: ^0.3.2
+  image_picker: ^0.6.2+3 
+  flushbar: ^1.10.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pedantic: ^1.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
