--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,15 @@ dependencies:
   async_loader: ^0.1.2
   fluttertoast: ^3.1.3
   card_settings: ^1.8.2  
-  form_bloc: ^0.10.4
-  flutter_form_bloc: ^0.10.6
-  flutter_bloc: ^3.2.0
+  form_bloc: ^0.15.0
+  flutter_form_bloc: ^0.15.0
+  flutter_bloc: ^5.0.1
   shared_preferences: ^0.5.6+1
   liquid_progress_indicator: ^0.3.2
   image_picker: ^0.6.2+3 
   flushbar: ^1.10.4
+  geolocator: ^5.1.3
+  location: ^3.0.0
 
 dev_dependencies:
   flutter_test:
