--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flushbar: ^1.10.4
   geolocator: ^5.1.3
   location: ^3.0.0
+  camera: ^0.5.8+2
+  path_provider: ^1.6.11
+  # path: ^1.7.0
 
 dev_dependencies:
   flutter_test:
