--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   location: ^3.0.0
   camera: ^0.5.8+2
   path_provider: ^1.6.11
+  gallery_saver: ^2.0.1
+  album_saver: ^0.0.2
   # path: ^1.7.0
 
 dev_dependencies:
